--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,8 +1,10 @@
+@import "./variables.scss";
+
 * {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: Poppins, sans-serif;
+  background-color: $main-bg;
 }
 
 *,
@@ -20,7 +22,6 @@ a,
 a:visited,
 a:hover {
   text-decoration: none;
-  font-family: Roboto, sans-serif;
 }
 
 a:focus,
@@ -40,7 +41,7 @@ body {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
-  font-family: Poppins, sans-serif;
+
   font-size: 100%;
   font-size: 14px;
   font-weight: 400;
@@ -48,12 +49,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
-}
-
-input,
-button,
-textarea {
-  font-family: inherit;
 }
 
 input::-webkit-outer-spin-button,
