--- a/frontend/src/shared/styles/global.scss
+++ b/frontend/src/shared/styles/global.scss
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   border: 0;
-  background-color: $main-bg;
 }
 
 *,
@@ -39,13 +38,12 @@ aside {
 html,
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   scroll-behavior: smooth;
-
+  background-color: $white;
   font-size: 100%;
   font-size: 14px;
   font-weight: 400;
-  line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
