--- a/frontend/src/shared/styles/variables.scss
+++ b/frontend/src/shared/styles/variables.scss
@@ -4,6 +4,7 @@ $green-dark: #aada0f;
 $green-pale: #e7f4bc;
 
 $blue-dark: #344054;
+$blue-light: #d9e0ea;
 $black: #1e1e1e;
+$grey-light: #8e8e8e;
 $white: #ffffff;
-$main-bg: #f7f6f0;
