--- a/frontend/src/features/auth/ui/Layout.module.scss
+++ b/frontend/src/features/auth/ui/Layout.module.scss
@@ -7,10 +7,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
   .text {
     display: flex;
     align-items: baseline;
     margin-bottom: 36px;
+
     .title {
       color: $black;
       font-size: 96px;
@@ -18,6 +20,7 @@
       font-weight: 400;
       line-height: normal;
     }
+
     .subtitle {
       color: $grey-light;
       font-size: 48px;
@@ -25,6 +28,13 @@
       font-weight: 400;
       line-height: normal;
       cursor: pointer;
+      transition: all 0.3s;
+
+      &:hover {
+        color: $black;
+        transition: all 0.3s;
+        font-size: 96px;
+      }
     }
   }
 }
