--- a/frontend/src/features/auth/ui/LoginForm/LoginFrom.module.scss
+++ b/frontend/src/features/auth/ui/LoginForm/LoginFrom.module.scss
@@ -5,30 +5,36 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
   .input {
     margin-bottom: 0;
   }
+
   .btn {
     margin-top: 18px;
   }
+
   .accounts {
     display: flex;
     justify-content: space-between;
     margin-top: 36px;
     width: 100%;
   }
-  .checkbox{
-	color: $black;
+
+  .checkbox {
+    color: $black;
     font-size: 22px;
     font-weight: 400;
     line-height: 29px;
   }
+
   .restore {
     margin-top: 8px;
     color: $grey-light;
     font-size: 18px;
     font-weight: 400;
-    line-height: 29px; /* 161.111% */
+    line-height: 29px;
+    /* 161.111% */
     text-decoration-line: underline;
   }
 }
