--- a/frontend/main/src/entities/NavigationSidebar/ui/NavigationSidebar.module.scss
+++ b/frontend/main/src/entities/NavigationSidebar/ui/NavigationSidebar.module.scss
@@ -1,6 +1,16 @@
 .sidebar {
   padding: 0.75rem 0.6875rem 1rem 0.6875rem;
-  max-width: 18.5rem;
+  min-width: 18.5rem;
+  float: left;
+
+  &Title {
+    color: var(--primary-text);
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.8125rem;
+    margin-bottom: 1.25rem;
+  }
 
   &Element {
     display: flex;
