--- a/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
+++ b/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
@@ -2,4 +2,51 @@
   position: absolute;
   top: 100%;
   right: 0;
+  padding: 0.5rem 0.75rem 0.625rem 0.75rem;
+  border-radius: 0.625rem;
+  width: 16rem;
+  margin-right: 2rem;
+  margin-top: 1rem;
+  background-color: var(--technical-background);
+
+  .title {
+    color: var(--primary-text);
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.8125rem;
+    margin-left: 0.62rem;
+  }
+
+  .text {
+    color: var(--primary-text);
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.8125rem;
+  }
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 0.75rem 0.625rem 2rem;
+  }
+
+  .icon {
+    margin-right: 1rem;
+  }
+
+  .theme {
+
+  }
+
+  .language {
+
+  }
+
+  .signout {
+
+  }
+
+
 }
