--- a/frontend/main/src/shared/ui/DropDown/DropDown.module.scss
+++ b/frontend/main/src/shared/ui/DropDown/DropDown.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     padding: 0.5rem 0.75rem 0.625rem 0.75rem;
     gap: 0.625rem;
-    align-items: flex-start;
+    align-items: center;
     border-radius: 0.625rem;
     color: var(--background);
 
