--- a/frontend/main/src/app/styles/global.css
+++ b/frontend/main/src/app/styles/global.css
@@ -1,94 +1,94 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-family: "Outfit", sans-serif;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: "Outfit", sans-serif;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 svg {
-    stroke: var(--primary-text);
+  stroke: var(--primary-text);
 }
 
 /*theme*/
 :root[data-theme="light"] {
-    --background: #f9fafb;
-    --primary-text: #111827;
-    --secondary-background: #e5e7eb;
-    --secondary-text: #4b5563;
-    --secondary-buttons: #9ca3af;
-    --tertiary-text: #6d7280;
-    --placeholder-text: #e5e7eb;
-    --technical-background: #ffffff
+  --background: #f9fafb;
+  --primary-text: #111827;
+  --secondary-background: #e5e7eb;
+  --secondary-text: #4b5563;
+  --secondary-buttons: #9ca3af;
+  --tertiary-text: #6d7280;
+  --placeholder-text: #e5e7eb;
+  --technical-background: #ffffff;
 }
 
 :root[data-theme="dark"] {
-    --background: #232525;
-    --primary-text: #dfdfdf;
-    --secondary-background: #191a1b;
-    --secondary-text: #8e8e8e;
-    --secondary-buttons: #9ca3af;
-    --tertiary-text: #344054;
-    --placeholder-text: #595a5a;
-    --technical-background: #080808
+  --background: #232525;
+  --primary-text: #dfdfdf;
+  --secondary-background: #191a1b;
+  --secondary-text: #8e8e8e;
+  --secondary-buttons: #9ca3af;
+  --tertiary-text: #344054;
+  --placeholder-text: #595a5a;
+  --technical-background: #080808;
 }
 
 :focus,
 :active {
-    outline: none;
+  outline: none;
 }
 
 a,
 a:visited,
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:focus,
 a:active {
-    outline: none;
+  outline: none;
 }
 
 nav,
 footer,
 header,
 aside {
-    display: block;
+  display: block;
 }
 
 html,
 body {
-    width: 100%;
-    height: 100vh;
-    scroll-behavior: smooth;
-    background-color: var(--background);
-    font-size: 100%;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-size-adjust: 100%;
+  width: 100%;
+  height: 100vh;
+  scroll-behavior: smooth;
+  background-color: var(--background);
+  font-size: 100%;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-size-adjust: 100%;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    appearance: none;
+  appearance: none;
 }
 
 input::-ms-clear {
-    display: none;
+  display: none;
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    vertical-align: top;
+  vertical-align: top;
 }
 
 h1,
@@ -97,21 +97,21 @@ h3,
 h4,
 h5,
 h6 {
-    font-size: inherit;
-    font-weight: 400;
+  font-size: inherit;
+  font-weight: 400;
 }
 
 button {
-    padding: 0;
-    cursor: pointer;
-    text-align: start;
-    color: inherit;
-    border: none;
-    background-color: transparent;
-    font: inherit;
+  padding: 0;
+  cursor: pointer;
+  text-align: start;
+  color: inherit;
+  border: none;
+  background-color: transparent;
+  font: inherit;
 
-    &::-moz-focus-inner {
-        padding: 0;
-        border: 0;
-    }
+  &::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
 }
