--- a/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
+++ b/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
@@ -36,17 +36,15 @@
     margin-right: 1rem;
   }
 
-  .theme {
-
+  .dropdown {
+    align-items: center;
+    padding: 0.5rem 0;
+    display: flex;
+    justify-content: right;
   }
 
-  .language {
-
+  .toggle {
+    margin-left: 1rem;
+    margin-right: 0.75rem;
   }
-
-  .signout {
-
-  }
-
-
 }
