--- a/frontend/main/src/app/styles/variables.scss
+++ b/frontend/main/src/app/styles/variables.scss
@@ -11,5 +11,5 @@ $white: #ffffff;
 $red-error: #ea4335;
 
 // icons for button
-$button-icon-apple: url("@assets/images/buttonIcons/apple_icon.svg");
-$button-icon-google: url("@assets/images/buttonIcons/google_icon.svg");
+$button-icon-apple: url('@assets/images/buttonIcons/apple_icon.svg');
+$button-icon-google: url('@assets/images/buttonIcons/google_icon.svg');
