--- a/frontend/main/src/assets/fonts/Outfit/Outfit-Black.module.scss
+++ b/frontend/main/src/assets/fonts/Outfit/Outfit-Black.module.scss
@@ -1,66 +1,66 @@
 /* Fonts.module.scss */
 
-$fontPath: "./"; // Путь к вашим TTF-файлам, если они находятся в той же директории
+$fontPath: './'; // Путь к вашим TTF-файлам, если они находятся в той же директории
 
 @font-face {
-  font-family: "Outfit-Black";
+  font-family: 'Outfit-Black';
   font-weight: 900;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-Black.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-Black.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-ExtraBold";
+  font-family: 'Outfit-ExtraBold';
   font-weight: 800;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-ExtraBold.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-ExtraBold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-Bold";
+  font-family: 'Outfit-Bold';
   font-weight: 700;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-Bold.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-Bold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-SemiBold";
+  font-family: 'Outfit-SemiBold';
   font-weight: 600;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-SemiBold.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-Medium";
+  font-family: 'Outfit-Medium';
   font-weight: 500;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-Medium.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-Medium.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-Regular";
+  font-family: 'Outfit-Regular';
   font-weight: 400;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-Regular.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-Light";
+  font-family: 'Outfit-Light';
   font-weight: 300;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-Light.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-Light.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-ExtraLight";
+  font-family: 'Outfit-ExtraLight';
   font-weight: 200;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-ExtraLight.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-ExtraLight.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Outfit-Thin";
+  font-family: 'Outfit-Thin';
   font-weight: 100;
   font-style: normal;
-  src: url("#{$fontPath}Outfit-Thin.ttf") format("truetype");
+  src: url('#{$fontPath}Outfit-Thin.ttf') format('truetype');
 }
