--- a/frontend/main/src/shared/ui/Toggle/Toggle.module.scss
+++ b/frontend/main/src/shared/ui/Toggle/Toggle.module.scss
@@ -26,7 +26,7 @@
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 1.3rem;
   width: 1.3rem;
   background-color: var(--background);
