--- a/frontend/main/src/entities/NavigationSidebar/ui/NavigationSidebar.module.scss
+++ b/frontend/main/src/entities/NavigationSidebar/ui/NavigationSidebar.module.scss
@@ -1,7 +1,11 @@
 .sidebar {
   padding: 0.75rem 0.6875rem 1rem 0.6875rem;
   min-width: 18.5rem;
-  float: left;
+  position: fixed;
+  z-index: 1;
+  top: 30px;
+  left: 0;
+  overflow-x: hidden;
 
   &Title {
     color: var(--primary-text);
