--- a/frontend/main/src/shared/ui/Input/Input.module.scss
+++ b/frontend/main/src/shared/ui/Input/Input.module.scss
@@ -1,5 +1,3 @@
-@import '@styles/variables';
-
 .input {
   display: flex;
   align-items: center;
@@ -17,27 +15,28 @@
 
 .primary {
   margin: 8px 0;
-  background-color: $white;
-  border: 2px solid $black;
+  background-color: var(--background);
+  border: 2px solid var(--primary-text);
   border-radius: 12px;
   padding: 16px;
   font-size: 22px;
   font-style: normal;
+  color: var(--primary-text);
 }
 
 .error {
-  border-color: $red-error;
+  border-color: var(--error);
 
   &Text {
     position: absolute;
     top: -8px;
     left: 38px; /* Отступ от иконки до текста */
-    background-color: $white;
+    background-color: (--background);
     font-size: 18px;
     font-style: normal;
     line-height: 29px;
     padding: 2px 4px;
-    color: $red-error;
+    color: var(--error);
     pointer-events: none;
   }
 }
