--- a/frontend/main/src/shared/ui/Button/Button.module.scss
+++ b/frontend/main/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,3 @@
-@import '@styles/variables';
-
 .btn {
   display: flex;
   justify-content: center;
@@ -8,65 +6,37 @@
 }
 
 .small {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px;
-  padding: 16px 20px;
+  line-height: 1.5rem;
+  padding: 1rem 1.25rem;
 }
 
 .medium {
   width: 100%;
-  font-size: 22px;
-  padding: 16px;
-}
-
-.secondary {
-  color: $black;
-  transition: 0.2s all;
-  border-radius: 12px;
-  box-shadow: 0 0 0 0 $blue-dark;
-  border: 2px solid $blue-dark;
-  background-color: $white;
-  &:hover {
-    box-shadow: 4px 4px 0px 0px $blue-dark;
-  }
-  &:active {
-    background-color: $blue-light;
-  }
-  &:disabled {
-    opacity: 0.4;
-    cursor: auto;
-    &:hover {
-      box-shadow: none;
-    }
-  }
+  font-size: 1.5rem;
+  padding: 1rem;
 }
 
 .primary {
-  color: $black;
-  background-color: $green-light;
+  color: var(--technical-background);
   transition: 0.2s all;
-  border-radius: 12px;
-  box-shadow: 0 0 0 0 $green-dark;
+  border-radius: 0.75rem;
 
-  &:hover {
-    box-shadow: 4px 4px 0px 0px $green-dark;
-  }
-  &:active {
-    background-color: $green-dark;
-  }
+  background-color: var(--success);
+
   &:disabled {
     cursor: auto;
-    background-color: $green-pale;
+
     &:hover {
       box-shadow: none;
     }
   }
 }
 
-.image {
-  margin-left: 12px;
-  width: 24px;
-  height: 24px;
+.icon {
+  margin-left: 0.75rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
