--- a/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
+++ b/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
@@ -8,6 +8,7 @@
   margin-right: 2rem;
   margin-top: 1rem;
   background-color: var(--technical-background);
+  z-index: 2;
 
   .title {
     color: var(--primary-text);
