--- a/frontend/main/src/shared/ui/Tag/Tag.module.scss
+++ b/frontend/main/src/shared/ui/Tag/Tag.module.scss
@@ -1,6 +1,6 @@
 .tag {
-  background: var(--success);
-  color: var(--technical-background);
+  background: var(--primaty-button);
+  color: var(--secondary);
   width: fit-content;
   padding: 0.125rem 0.5rem 0.125rem 0.5rem;
   display: block;
