--- a/frontend/main/src/entities/Template/ui/TemplateCard/TemplateCard.module.scss
+++ b/frontend/main/src/entities/Template/ui/TemplateCard/TemplateCard.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   max-width: 23.4375rem;
+  cursor: pointer;
 
   .content {
     display: flex;
@@ -38,7 +39,6 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-
     }
   }
 }
