--- a/frontend/main/src/entities/NavigationSidebar/ui/NavigationSidebar.module.scss
+++ b/frontend/main/src/entities/NavigationSidebar/ui/NavigationSidebar.module.scss
@@ -19,7 +19,7 @@
   &Element {
     display: flex;
     padding: 0.5rem 0.75rem 0.625rem 2rem;
-    flex-direction: column;
+    gap: 1rem;
     align-items: flex-start;
     font-size: 1.375rem;
     font-style: normal;
@@ -35,5 +35,11 @@
   &Active {
     background-color: var(--primary-text);
     color: var(--background);
+
+    svg {
+      path {
+        stroke: var(--background);
+      }
+    }
   }
 }
