[FRONTEND] husky test and bug fixes

--- a/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
+++ b/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
@@ -7,7 +7,7 @@
   width: 16rem;
   margin-right: 2rem;
   margin-top: 1rem;
-  background-color: var(--technical-background);
+  background-color: var(--modal-background);
   z-index: 2;
 
   .title {
