--- a/frontend/main/src/shared/ui/Button/Button.module.scss
+++ b/frontend/main/src/shared/ui/Button/Button.module.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  width: fit-content;
 }
 
 .small {
@@ -14,7 +15,6 @@
 }
 
 .medium {
-  width: 100%;
   font-size: 1.5rem;
   padding: 1rem;
 }
@@ -35,8 +35,3 @@
   }
 }
 
-.icon {
-  margin-left: 0.75rem;
-  width: 1.5rem;
-  height: 1.5rem;
-}
