--- a/frontend/main/src/entities/History/ui/HistoryEmpty/HistoryEmpty.module.scss
+++ b/frontend/main/src/entities/History/ui/HistoryEmpty/HistoryEmpty.module.scss
@@ -2,7 +2,7 @@
   font-weight: 500;
   font-size: 2rem;
   line-height: 91%;
-  color: #dfdfdf;
+  color: var(--primary-text);
   text-align: center;
   margin-bottom: 2.1875rem;
 }
