--- a/frontend/main/src/entities/Workouts/ui/CreateNewWorkout/CreateNewWorkout.module.scss
+++ b/frontend/main/src/entities/Workouts/ui/CreateNewWorkout/CreateNewWorkout.module.scss
@@ -7,7 +7,7 @@
   font-weight: 500;
   font-size: 2rem;
   line-height: 91%;
-  color: #dfdfdf;
+  color: var(--primary-text);
   margin-bottom: 2.1875rem;
 }
 
