--- a/frontend/main/src/entities/Workouts/ui/RecentTemplates/RecentTemplates.module.scss
+++ b/frontend/main/src/entities/Workouts/ui/RecentTemplates/RecentTemplates.module.scss
@@ -2,7 +2,7 @@
   font-weight: 500;
   font-size: 2rem;
   line-height: 91%;
-  color: #dfdfdf;
+  color: var(--primary-text);
   margin-bottom: 2.1875rem;
 }
 
