--- a/frontend/main/src/shared/ui/Button/Button.module.scss
+++ b/frontend/main/src/shared/ui/Button/Button.module.scss
@@ -20,11 +20,11 @@
 }
 
 .primary {
-  color: var(--technical-background);
+  color: var(--primary);
   transition: 0.2s all;
   border-radius: 0.75rem;
 
-  background-color: var(--success);
+  background-color: var(--primary-text);
 
   &:disabled {
     cursor: auto;
