--- a/frontend/main/src/app/styles/global.css
+++ b/frontend/main/src/app/styles/global.css
@@ -166,3 +166,54 @@ button {
         border: 0;
     }
 }
+
+input[type="checkbox"] {
+    cursor: pointer;
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    /* Remove most all native input styles */
+    appearance: none;
+    /* For iOS < 15 */
+    background-color: var(--primary-text);
+    /* Not removed via appearance */
+    margin: 0;
+    width: 24px;
+    height: 24px;
+    font: inherit;
+    color: currentColor;
+    padding: 0;
+    border: none;
+    border-radius: 0.25rem;
+    transform: translateY(-0.075em);
+
+    display: grid;
+    place-content: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 18px;
+    height: 18px;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    transform: scale(0);
+    transform-origin: bottom left;
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em var(--primary);
+    /* Windows High Contrast Mode */
+    background-color: CanvasText;
+
+}
+
+input[type="checkbox"]:checked::before {
+    transform: scale(1);
+}
+
+input[type="checkbox"]:disabled {
+    --form-control-color: var(--gray-text);
+    color: var(--primary);
+    cursor: not-allowed;
+}
