--- a/frontend/main/src/shared/ui/Input/Input.module.scss
+++ b/frontend/main/src/shared/ui/Input/Input.module.scss
@@ -21,7 +21,7 @@
 .annotation {
   border-color: var(--error);
   border-bottom: 2px solid #8E8E8E;
-
+  font-size: 2rem;
   &Text {
     border-bottom: #8E8E8E;
     position: absolute;
