--- a/frontend/main/src/app/styles/global.css
+++ b/frontend/main/src/app/styles/global.css
@@ -174,7 +174,7 @@ input[type="checkbox"] {
     /* Remove most all native input styles */
     appearance: none;
     /* For iOS < 15 */
-    background-color: var(--primary-text);
+    background-color: var(--primary);
     /* Not removed via appearance */
     margin: 0;
     width: 24px;
@@ -182,15 +182,13 @@ input[type="checkbox"] {
     font: inherit;
     color: currentColor;
     padding: 0;
-    border: none;
+    border: 1px solid var(--primary-text);
     border-radius: 0.25rem;
     transform: translateY(-0.075em);
 
     display: grid;
     place-content: center;
-    -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none;
     outline: none;
 }
 
@@ -205,11 +203,15 @@ input[type="checkbox"]::before {
     box-shadow: inset 1em 1em var(--primary);
     /* Windows High Contrast Mode */
     background-color: CanvasText;
-
+    border: 1px solid var(--primary-text);
 }
 
 input[type="checkbox"]:checked::before {
     transform: scale(1);
+}
+
+input[type="checkbox"]:checked {
+    background-color: var(--primary-text);
 }
 
 input[type="checkbox"]:disabled {
