--- a/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
+++ b/frontend/main/src/entities/ProfileMenu/ui/ProfileMenu.module.scss
@@ -5,7 +5,6 @@
   padding: 0.5rem 0.75rem 0.625rem 0.75rem;
   border-radius: 0.625rem;
   width: 16rem;
-  margin-right: 2rem;
   margin-top: 1rem;
   background-color: var(--modal-background);
   z-index: 2;
@@ -27,12 +26,6 @@
     line-height: 1.8125rem;
   }
 
-  .wrapper {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem 0.75rem 0.625rem 2rem;
-  }
-
   .icon {
     margin-right: 1rem;
   }
@@ -45,7 +38,14 @@
   }
 
   .toggle {
-    margin-left: 1rem;
     margin-right: 0.75rem;
+  }
+
+  .wrapper {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 0.5rem 0.75rem 0.625rem 0.75rem;
+    gap: 0.625rem;
   }
 }
