--- a/frontend/main/src/features/profile/ui/ProfileIcon/ProfileIcon.module.scss
+++ b/frontend/main/src/features/profile/ui/ProfileIcon/ProfileIcon.module.scss
@@ -1,34 +1,16 @@
 // ProfileIcon.module.scss
 .userIconContainer {
   position: relative;
-}
-
-.userIcon {
-  cursor: pointer;
-}
-
-.dropdownMenu {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  padding: 8px;
-  z-index: 1000;
-
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    li {
-      padding: 8px;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #f0f0f0;
-      }
-    }
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  .userIcon {
+    cursor: pointer;
+  }
+  .username {
+    font-weight: 500;
+    font-size: 1.38rem;
+    line-height: 132%;
+    color: var(--primary-text);
   }
 }
