--- a/frontend/main/src/shared/ui/Toggle/Toggle.module.scss
+++ b/frontend/main/src/shared/ui/Toggle/Toggle.module.scss
@@ -19,7 +19,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: var(--secondary-button-active);
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -27,25 +27,21 @@
 .slider:before {
   position: absolute;
   content: '';
-  height: 1.3rem;
-  width: 1.3rem;
-  background-color: var(--background);
+  height: 1.2rem;
+  width: 1.2rem;
+  background-color: green;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
 input:checked + .slider {
-  background-color: var(--primary-text);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px var(--primary-text);
+  background-color: var(--secondary-button-active);
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
+  -webkit-transform: translateX(25px);
   -ms-transform: translateX(20px);
-  transform: translateX(21px);
+  transform: translateX(20px);
 }
 
 /* Rounded sliders */
@@ -54,5 +50,7 @@ input:checked + .slider:before {
 }
 
 .slider.round:before {
+  margin-left: 1px;
+  margin-top: 0.9px;
   border-radius: 50%;
 }
